Refit frontend, adds partials, removes id methods

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,21 +1,16 @@
-<div class="nav-container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <p class="navbar-text"><%= @merchant.name %></p>
-    <ul class="nav navbar-nav">
-      <li><%= link_to 'Dashboard', merchant_dashboard_index_path, class: 'link_1', style: 'pull-right' %>
-      <li><%= link_to 'Items', merchant_items_path, class: 'link_1', style: 'pull-right' %>
-      <li><%= link_to 'Invoices', merchant_invoices_path, class: 'link_1', style: 'pull-right' %>
-    </ul>
-  </nav>
+<%= render partial: "shared/nav" %>
+
+<div class="row">
+  <div class="col-sm-6 column-header">
+    <p class='mr-auto'>Favorite Customers</p>
+  </div>
+  <div class="col-sm-6 column-header">
+    <p class='ml-auto'>Items Ready to Ship</p>
+  </div>
 </div>
 
-<body>
-  <div class="row">
-    <p class='mr-auto col-sm-5'>Favorite Customers</p>
-    <p class='ml-auto col-sm-5'>Items Ready to Ship</p>
-  </div>
- 
-  <ul class='mr-auto col-sm-4'>
+<div class="mr-auto col-sm-6">
+  <ul>
     <% @merchant.favorite_customers.each do |customer| %>
       <section id="customer-<%= customer.id %>">
           <li><%= customer.first_name %> <%= customer.last_name %>
@@ -23,15 +18,16 @@
       </section>
     <% end %>
   </ul>
+</div>
 
-  <ul class='ml-auto col-sm-4'>
-    <section id = "items_ready_to_ship" >
+<div class="ml-auto col-sm-6">
+  <ul>
+    <section id ="items_ready_to_ship">
       <p><% @merchant.ordered_items_to_ship.each do |item| %>
-            <li><%= item.name %> - Invoice #<%= link_to "#{item.invoice_ids}", "/merchant/#{@merchant.id}/invoices/#{item.invoice_ids[0]}" %>
+            <li><%= item.name %> - Invoice #<%= link_to "#{item.invoice_ids}", "/merchants/#{@merchant.id}/invoices/#{item.invoice_ids[0]}" %>
             <%= item.created_at.strftime("%A, %B %-d, %Y") %></li>
         <% end %>
       </p>
     </section>
   </ul>
-
-</body>
+</div>
