--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,13 +1,4 @@
-<div class="nav-container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <p class="navbar-text"><%= @merchant.name %></p>
-    <ul class="nav navbar-nav">
-      <li><%= link_to 'Dashboard', merchant_dashboard_index_path, style: 'pull-right' %>
-      <%= link_to 'My Items', merchant_items_path(@merchant), style: 'pull-right' %>
-      <%= link_to 'My Invoices', merchant_invoices_path(@merchant), style: 'pull-right' %></li>
-    </ul>
-  </nav>
-</div>
+<%= render partial: "shared/nav" %>
 
 <body>
   <div class="row">
@@ -17,27 +8,30 @@
   <p><%= link_to "Create New Item", new_merchant_item_path(@merchant) %></p>
     
   <div class="row">
-    <p class='mr-auto col-sm-5'>Enabled Items</p>
-    <p class='ml-auto col-sm-5'>Top Items</p>
-  </div>
+    <div class="col-sm-6">
+      <div class="column-header">
+        <p>Enabled Items</p>
+      </div>
 
-  <ul class='mr-auto col-sm-4'>
-    <section id="enabled">
-      <% @enabled_items.each do |item| %>
-        <section id="item-<%= item.id %>">
-          <li><%= link_to "#{item.name}", merchant_item_path(@merchant, item) %></li>
-          <%= button_to "Disable", merchant_item_status_path(@merchant, item), method: :patch, params: {status: "disabled"} %>
-        </section>
-      <% end %>
-    </section>
-  </ul>
-  
-  <div class="row">
-    <p class='mr-auto col-sm-5'>Disabled Merchants</p>
-  </div>
-  
-  <ul class='mr-auto col-sm-4'>
-    <section id="disabled">
+    <ul>
+      <section id="enabled">
+        <% @enabled_items.each do |item| %>
+          <section id="item-<%= item.id %>">
+            <li><%= link_to "#{item.name}", merchant_item_path(@merchant, item) %></li>
+            <%= button_to "Disable", merchant_item_status_path(@merchant, item), method: :patch, params: {status: "disabled"} %>
+          </section>
+        <% end %>
+      </section>
+    </ul>
+
+    </div>
+
+
+    <div class="col-sm-6">
+      <div class="column-header">
+        <p>Disabled Items</p>
+      </div>
+       <section id="disabled">
       <% @disabled_items.each do |item| %>
         <section id="item-<%= item.id %>">
           <li><%= link_to "#{item.name}", merchant_item_path(@merchant, item) %></li>
@@ -45,14 +39,23 @@
         </section>
       <% end %>
     </section>
-  </ul>
+    </div>
+  </div>
+
   
-  <ul class='ml-auto col-sm-4'>
-  <section id="top_5">
-    <% @merchant.top_5_items.each do |item| %>
-      <li><%= link_to "#{item.name}", merchant_item_path(@merchant, item)  %> -
-        $<%= item.total_revenue %> in sales</li>
-      <p> Top selling date for <%= item.name %> was <%= item.best_day %> </p>
-    <% end %>
-  </section>
-</body>
+  
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="column-header">
+        <p>Top 5 Items</p>
+      </div>
+
+    <section id="top_5">
+      <% @merchant.top_5_items.each do |item| %>
+        <li><%= link_to "#{item.name}", merchant_item_path(@merchant, item)  %> -
+          <%= number_to_currency(item.total_revenue) %> in sales</li>
+        <p> Top selling date for <%= item.name %> was <%= item.best_day %> </p>
+      <% end %>
+    </section>
+  </div>
+</div>
