--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Little Etsy Shop</title>
+    <title>Little Esty Shop - Final</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -9,74 +9,19 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-    <style>
-    .navbar {
-      margin-bottom: 30px;
-    }
-    .navbar-text {
-      margin-top: 1px;
-      margin-bottom: 1px;
-      font-weight: bold;
-    }
-    .col-sm-5 {
-      background-color:lavender;
-      font-weight: bold;
-      text-align:center;
-      margin-right: 80px
-    }
-    .col-sm-4 {
-      text-align:left;
-      margin-right: 80px;
-      margin-left: 10px
-    }
-    .col-sm-6 {
-      background-color:lavenderblush;
-      font-weight: bold;
-      text-align:center;
-    }
-    .col-12 {
-      background-color:#EBEFF3;
-      font-weight: bold;
-      text-align:center;
-      margin-right: 80px;
-      margin-left: 10px
-    }
-
-    .table {
-      font-family: arial, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
-    }
-
-    .td {
-      border: 1px solid #000000;
-      text-align: left;
-      padding: 8px;
-    }
-
-    .th1 {
-      background-color: #8D8F8F;
-      border: 1px solid #dddddd;
-      text-align: center;
-      padding: 4px;
-      color: #ffffff
-    }
-    .th2 {
-      background-color: #dddddd;
-      border: 1px solid #dddddd;
-      text-align: left;
-      padding: 8px;
-    }
-    </style>
   </head>
 
   <body>
     <div class="top-container">
-      <h1 style="text-align:center; background-color:#EBEFF3;">Little Esty Shop</h1>
-      <% flash.each do |type, notice| %>
-        <h3><b><%= notice %></b></h3>
-      <% end %>
-      <%= yield %>
+      <h1>Little Esty Shop - Final</h1>
+      <div class="container">
+        <% flash.each do |type, notice| %>
+          <h5 class="text-info"><b><%= notice %></b></h5>
+        <% end %>
+      </div>
+      <div class="container">
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
