--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -1,13 +1,4 @@
-<div class="nav-container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <p class="navbar-text">Admin Dashboard</p>
-    <ul class="nav navbar-nav">
-      <li><%= link_to 'Dashboard', admin_dashboard_index_path, style: 'pull-right' %>
-      <%= link_to 'Merchants', admin_merchants_path, style: 'pull-right' %>
-      <%= link_to 'Invoices', admin_invoices_path, style: 'pull-right' %></li>
-    </ul>
-  </nav>
-</div>
+<%= render partial: "shared/adminnav" %>
 
 <body>
   <div class="row">
@@ -22,7 +13,7 @@
     </section>
       <% end %>
   <p>Created on: <%= @invoice.created_at.strftime("%A, %B %d, %Y") %>
-  <p>Total Revenue: $<%= @invoice.total_revenue %>
+  <p>Total Revenue: <%= number_to_currency(@invoice.total_revenue) %>
 
   <h4>Customer:</h4>
     <%= @invoice.customer.first_name %> <%= @invoice.customer.last_name %><br>
@@ -46,8 +37,8 @@
         <tr class="tr">
           <td style="text-align:center"><%= i.item.name %></td>
           <td style="text-align:center"><%= i.quantity %></td>
-          <td style="text-align:center">$<%= i.unit_price %></td>
-          <td style="text-align:center"><%= i.status%></td><br/>
+          <td style="text-align:center"><%= number_to_currency(i.unit_price) %></td>
+          <td style="text-align:center"><%= i.status%></td>
         </tr>
       <% end %>
     </tbody>
