feat: Complete US-2, NO SAD PATH

--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Coupons</h1>
-
+<h2><%= link_to 'Create New Coupon', new_merchant_coupon_path(params[:merchant_id]) %></h2>
 <ul>
   <% @coupons.each do |coupon| %>
     <li>
