feat: Complete US-4

--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "shared/nav" %>
 <h1>All Coupons</h1>
 <h2><%= link_to 'Create New Coupon', new_merchant_coupon_path(params[:merchant_id]) %></h2>
 <ul>
