--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "shared/nav" %>
 <h1>Create New Coupon</h1>
 <%= form_with model: [:merchant, Coupon.new], method: :post do |f| %>
   <%= f.hidden_field :merchant_id, value: params[:merchant_id] %>
