--- a/app/views/coupons/show.html.erb
+++ b/app/views/coupons/show.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "shared/nav" %>
 <h1><%= @coupon.coupon %> Coupon Details</h1>
 <section>
   <p>Code: <%= @coupon.unique_code.upcase %></p>
@@ -8,6 +9,13 @@
       dollars off
     <% end %>
   </p>
-  <p>Status: <%= @coupon.status %></p>
+  <p>Status: <%= @coupon.status %> 
+    <div>
+      <%= form_with model: [:merchant, Coupon.new], method: :patch, url: "/merchants/#{params[:merchant_id]}/coupons/#{params[:id]}", local: true do |f| %>
+        <%= f.hidden_field :status, value: "inactive" %>
+        <%= f.submit "deactivate" %>
+      <% end %>
+    </div>
+  </p>
   <p>Successful Transactions: <%= @coupon.successful_transactions%></p>
 </section>
