feat: Complete first half of US-7

--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -11,7 +11,8 @@
   <br>
 
   <p> Created on: <%= @invoice.created_at.strftime("%A, %B %-d, %Y") %></p>
-  <p>Total Revenue: <%= @invoice.total_revenue %></p>
+  <p>Subtotal Revenue: <%= number_to_currency(@invoice.total_revenue) %></p>
+  <p>Total Revenue: <%= number_to_currency(@invoice.total_revenue_with_coupon) %></p>
 
 
   <h4>Customer:</h4>
